# django-traffic-monitor

./: .gitignore  LICENSE  MANIFEST.in  README.rst  manage.py  setup.cfg  setup.py
docs/: README.rst
traffic_monitor/: admin.py  apps.py  conf.py  email.py  models.py  tools.py  urls.py  views.py
traffic_monitor/locale/en/LC_MESSAGES/: django.po
traffic_monitor/locale/ko/LC_MESSAGES/: django.mo  django.po
traffic_monitor/migrations/: 0001_initial.py  0002_auto_20200302_1509.py
traffic_monitor/templates/traffic_monitor/: alarm.html  show_traffic.html
