[metadata]
name = django-traffic-monitor
version = 0.3
description = A Django application that eases to monitor server traffic.
long_description = file: README.rst
url = https://github.com/genonfire/django-traffic-monitor/
author = KJ Kim
author_email = gencode.me@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
